@@ -1,5 +1,7 @@
 1.9-SNAPSHOT
 ------------
+o Server now allows - under some specific circumstances - setting empty arrays as properties. Specifically, it is allowed if there is a pre-existing
+  array property on the entity from which the server can infer the type of array to store.
 o Traversal Javascript is now security sandboxed. It is possible to turn the sandbox off for the next two releases, for backwards compatibility.
 
 1.8.RC1 (2012-09-05)
